tests/fixtures/errors/e0101_unknown_name.mimz
// expect: E0101
module M {
  out y: bit
  y = nope
}
